// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageBanner renders 1`] = `
<imageBanner__StyledWrapper
  allowContentUnderflow={false}
  color=""
  imageFullWidth={false}
  imageSrc=""
  large={false}
  role="banner"
>
  <imageBanner__StyledContainer
    imageFullWidth={false}
    imageSrc=""
    mx="auto"
  >
    <imageBanner__StyledRow>
      <Column
        width={1}
      >
        <StyledBannerTitle />
        <StyledBannerSubtitle />
      </Column>
    </imageBanner__StyledRow>
  </imageBanner__StyledContainer>
</imageBanner__StyledWrapper>
`;

exports[`ImageBanner renders the subtitleText from props to BannerSubtitle 1`] = `
<imageBanner__StyledWrapper
  allowContentUnderflow={false}
  color=""
  imageFullWidth={false}
  imageSrc=""
  large={false}
  role="banner"
>
  <imageBanner__StyledContainer
    imageFullWidth={false}
    imageSrc=""
    mx="auto"
  >
    <imageBanner__StyledRow>
      <Column
        width={1}
      >
        <StyledBannerTitle />
        <StyledBannerSubtitle>
          And here is a test subtitle!
        </StyledBannerSubtitle>
      </Column>
    </imageBanner__StyledRow>
  </imageBanner__StyledContainer>
</imageBanner__StyledWrapper>
`;

exports[`ImageBanner renders the titleText from props to BannerTitle  1`] = `
<imageBanner__StyledWrapper
  allowContentUnderflow={false}
  color=""
  imageFullWidth={false}
  imageSrc=""
  large={false}
  role="banner"
>
  <imageBanner__StyledContainer
    imageFullWidth={false}
    imageSrc=""
    mx="auto"
  >
    <imageBanner__StyledRow>
      <Column
        width={1}
      >
        <StyledBannerTitle>
          Here is a test title!
        </StyledBannerTitle>
        <StyledBannerSubtitle />
      </Column>
    </imageBanner__StyledRow>
  </imageBanner__StyledContainer>
</imageBanner__StyledWrapper>
`;
